# weirdns

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml  rustfmt.toml  weirdns.toml
.github/workflows/: build.yml  release.yml
install/: config.toml  weirdns.service
install/debian/: service
src/: config.rs  dns.rs  dns64.rs  glob.rs  instance.rs  main.c  main.rs  notify.rs  transport.rs
