[package]
name = "weirdns"
version = "0.1.4"
edition = "2024"
description = "DNS mangler for custom DNS64 behaviours"
license = "BSD-2-Clause"

[package.metadata.deb]
maintainer = "Eric Long <i@hack3r.moe>"
section = "net"
assets = [
  "$auto",
  ["config.example.toml", "/etc/weirdns/weirdns.toml", "644"],
]
maintainer-scripts = "install/debian"
systemd-units = {}

[dependencies]
hickory-proto = { version = "0.26", default-features = false, features = ["std", "serde"] }
smol = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3.20.0"
argh = "0.1"
either = "1.16.0"
fqdn = "0.5"
fqdn-trie = "0.5"
ipnet = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
