[package]
name = "weirdns"
version = "0.1.4"
edition = "2024"
description = "DNS mangler for custom DNS64 behaviours"
license = "BSD-2-Clause"

[package.metadata.deb]
maintainer = "Eric Long <i@hack3r.moe>"
section = "net"
assets = [
  "$auto",
  ["config.example.toml", "/etc/weirdns/weirdns.toml", "644"],
]
maintainer-scripts = "install/debian"
systemd-units = {}

[dependencies]
simple-dns = "0.11"
async-executor = "1"
async-io = "2"
async-net = "2"
futures-lite = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
argh = "0.1"
either = "1.16.0"
fqdn = "0.5"
fqdn-trie = "0.5"
ipnet = "2"
anyhow = "1.0.102"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
